--- a/_config.yml
+++ b/_config.yml
@@ -13,26 +13,26 @@ baseurl: ''
 lang: en
 
 # Additional parameters for datetime localization, optional. › https://github.com/iamkun/dayjs/tree/dev/src/locale
-prefer_datetime_locale:
+prefer_datetime_locale: zh-tw
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Asia/Taipei
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Tita's blog                         # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 記錄我學到的一切   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  關於一個大學二年級的資訊仔，將資工日常寫成了文章
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://tiffanyliu1224.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: tiffanyliu1224             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
@@ -40,15 +40,15 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Tita
+  email: tiffanyliu1224@gmail.com            # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://github.com/tiffanyliu1224     # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/tita-liu-7a5057224
 
 google_site_verification:               # fill in to your verification string
 
