change remote_theme and readme

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 
 # Import the theme
 # theme: jekyll-theme-chirpy
-remote_theme: "tiffanyliu1224/tiffanyliu1224.github.io@main"
+# remote_theme: "tiffanyliu1224/tiffanyliu1224.github.io@main"
+remote_theme: "cotes2020/jekyll-theme-chirpy"
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
