https://tiffanyliu1224.github.io/, add '/'

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description: >-                        # used by seo meta and the atom feed
   關於一個大學二年級的資訊仔，將資工日常寫成了文章
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://tiffanyliu1224.github.io'
+url: 'https://tiffanyliu1224.github.io/'
 
 github:
   username: tiffanyliu1224             # change to your github username
