--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ description: >-                        # used by seo meta and the atom feed
   關於一個大學二年級的資訊仔，將資工日常寫成了文章
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://tiffanyliu1224.github.io/'
+url: 'https://titaliu1224.github.io/'
 
 github:
-  username: tiffanyliu1224             # change to your github username
+  username: titaliu1224             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
@@ -47,7 +47,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/tiffanyliu1224     # change to your github homepage
+    - https://github.com/titaliu1224     # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/tita-liu-7a5057224
