--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 'avatar.jpg'
+avatar: 'avatar.webp'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
