新貼文: 密室逃脫 和 增加 giscus 設定

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ google_site_verification:               # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id:                 # fill in your Google Analytics ID
+  id:G-VNY4CK35F9     # fill in your Google Analytics ID
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
@@ -101,8 +101,8 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:             # <gh-username>/<repo>
-    repo_id:
+    repo: titaliu1224/titaliu1224.github.io    # <gh-username>/<repo>
+    repo_id: 483315600    
     category:
     category_id:
     mapping:          # optional, default to 'pathname'
