--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -30,3 +30,6 @@ jobs:
           url: "https://blog.ryankert.cc/atom.xml"
           target: _friends_link/
           
+      - name: execute feed.rb
+        run: ruby feed.rb
+          
