--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -1,7 +1,9 @@
 name: 'Automatic build for downloading feed'
 on:
-#   schedule: # Run workflow automatically
-#     - cron: '0 * * * *' # Runs every hour, on the hour
+  push:
+    branches: [ "main" ]
+  schedule: # Run workflow automatically
+    - cron: '0,15,20 * * * *' # Runs every hour, on the hour
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
 jobs:
@@ -13,16 +15,9 @@ jobs:
       - uses: wow-actions/download-upload@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          url: "https://medium.com/feed/@TitaLiu"
+          url: "https://tigercosmos.xyz/atom.xml"
           dir: _friends_link/
-          filename: TitaLiu.xml
-          
-      - uses: wow-actions/download-upload@v1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          url: "https://medium.com/feed/@AmuAstra"
-          dir: _friends_link/
-          filename: AmuAstra.xml
+          filename: tigercosmos.xml
           
       - uses: wow-actions/download-upload@v1
         with:
