change gemfile and about.md

--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ timezone: Asia/Taipei
 
 title: Tita's blog                         # the main title
 
-tagline: 記錄我學到的一切   # it will display as the sub-title
+tagline: 歡迎來到我家   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  關於一個大學二年級的資訊仔，將資工日常寫成了文章
+  關於一個大學三年級的資訊仔，將資工日常寫成了文章。
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://titaliu1224.github.io/'
