--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,17 +6,7 @@ on:
     - cron: '0,15 * * * *' # Runs every hour, on the hour
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.0' # Not needed with a .ruby-version file
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - run: bundle exec rake
-      
+jobs:   
   download-feed-file-automatically:
     name: Update this feed files for friends
     runs-on: ubuntu-latest
@@ -37,7 +27,12 @@ jobs:
           filename: RyanKert.xml
           
       - name: use feeds.rb to make rss to markdown
-        run: ruby feeds.rb
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - run: ruby feeds.rb
       
           
           
