--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -2,11 +2,9 @@ name: 'Automatic build for downloading feed'
 on:
   push:
     branches: [ "main" ]
-  schedule: # Run workflow automatically
-    - cron: '0 * * * *' # Runs every hour, on the hour
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
-jobs:
+jobs:   
   download-feed-file-automatically:
     name: Update this feed files for friends
     runs-on: ubuntu-latest
@@ -26,4 +24,12 @@ jobs:
           dir: _friends_link/
           filename: RyanKert.xml
           
-          
+      - name: setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.1 # Not needed with a .ruby-version file
+      - name: install bundle
+        run: bundle install
+      - name: run feeds.rb
+        run: ruby feeds.rb
+        
