--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -34,21 +34,14 @@ jobs:
         run: ruby feeds.rb
         
       - name: Commit files
-        id: commit
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "github-actions"
-          git add --all
-          if [-z "$(git status --porcelain)"]; then
-             echo "::set-output name=push::false"
-          else
-             git commit -m "Add changes" -a
-             echo "::set-output name=push::true"
-          fi
-          shell: bash
-      - name: Push changes
-        if: steps.commit.outputs.push == 'true'
+          git config --local user.email "test@github.com"
+          git config --local user.name "GitHub Action test"
+          git add ./friends_link
+          git commit -m "Add changes"
+      - name: Push changes # push the output folder to your repo
         uses: ad-m/github-push-action@master
         with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
         
