--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -29,6 +29,7 @@ jobs:
     name: transfer rss to markdown
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: setup ruby
         uses: ruby/setup-ruby@v1
         with:
