--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -30,6 +30,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: print directory
+        run: ls -al
       - name: setup ruby
         uses: ruby/setup-ruby@v1
         with:
