--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -14,14 +14,14 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           url: "https://tigercosmos.xyz/atom.xml"
-          dir: _friends_link/
+          dir: assets/friends_file/
           filename: tigercosmos.xml
           
       - uses: wow-actions/download-upload@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           url: "https://blog.ryankert.cc/atom.xml"
-          dir: _friends_link/
+          dir: assets/friends_file/
           filename: RyanKert.xml
           
   generate-md-file-for-rss:
