--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Tita
+  name: Tita Liu
   email: tiffanyliu1224@gmail.com            # change to your email address
   links:
     # The first element serves as the copyright owner's link
