google search console 驗證

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ social:
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/tita-liu-7a5057224
 
-google_site_verification:               # fill in to your verification string
+google_site_verification: ikZm0tvKujXyWPPUukOAKxfh6hMUp41TJipnV-D5yus       # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
