--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -48,7 +48,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add ./_friends_link
-          git commit -a -m "Automatic add file from workflow" || 
+          git commit -a -m "Automatic add file from workflow" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
