--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -5,6 +5,26 @@ on:
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
 jobs:   
+  delete-old-rss-files:
+    name: delete all friends feed files 
+    runs-on: ubuntu-latest
+    steps:
+      - name: delete files
+        run:
+          rm -rf assets/friends_file/
+      - name: Commit files
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add ./_friends_link
+          git commit -a -m "Automatic delete rss files from workflow" || true
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PERSONAL_TOKEN }}
+          branch: ${{ github.ref }}
+          force: true
+  
   download-feed-file-automatically:
     name: Update this feed files for friends
     runs-on: ubuntu-latest
