--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_TOKEN }}
-      - name: delete files
+      - name: Delete files
         run:
           rm -rf assets/friends_file/
       - name: Commit files
@@ -26,7 +26,6 @@ jobs:
         with:
           github_token: ${{ secrets.PERSONAL_TOKEN }}
           branch: ${{ github.ref }}
-          force: true
   
   download-feed-file-automatically:
     needs: delete-old-rss-files
@@ -34,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: check deleted files
+      - name: Check deleted files
         run: ls -al assets/friends_file
       - uses: wow-actions/download-upload@v1
         with:
@@ -95,5 +94,4 @@ jobs:
         with:
           github_token: ${{ secrets.PERSONAL_TOKEN }}
           branch: ${{ github.ref }}
-          force: true
         
