--- a/.github/workflows/auto-feed.yml
+++ b/.github/workflows/auto-feed.yml
@@ -14,7 +14,7 @@ jobs:
           token: ${{ secrets.PERSONAL_TOKEN }}
       - name: Delete files
         run:
-          rm -rf assets/friends_file/
+          rm -rf assets/friends_file/*.xml
       - name: Commit files
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
