--- a/assets/friends_file/rss_feeds.yml
+++ b/assets/friends_file/rss_feeds.yml
@@ -1,8 +1,10 @@
-- name: Tita's Medium
-  feed: ./assets/friends_file/TitaLiu.xml
+- name: Mavis's blog
+  feed: ./assets/friends_file/Mavis.xml
+- name: Ejimful's blog
+  feed: ./assets/friends_file/Ejimful.xml
 - name: Astra's Medium
   feed: ./assets/friends_file/AmuAstra.xml
 - name: Ryan's blog
   feed: ./assets/friends_file/RyanKert.xml
 - name: Liu An-Chi's blog
-  feed: ./assets/friends_file/tigercosmos.xml
+  feed: ./assets/friends_file/Tigercosmos.xml
